--- a/main/templates/main/garage.html
+++ b/main/templates/main/garage.html
@@ -1,17 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main/css/garage/style.css">
+    <link rel="stylesheet" href="{% static 'main/css/garage/style.css' %}">
     <title> Garage </title>
 </head>
 <body>
     <header>
         <div class = "money_header">
             <span> 
-                <img src="./main/icons/dollar.png" alt=""> 
+                <img src="{% static 'main/icons/dollar.png' %}" alt=""> 
             </span>
             <span>
                 <h1> $1000 </h1>
@@ -26,7 +28,7 @@
 
         <div class = "user_header">
             <h1> Suro299 </h1>
-            <img width="40px" src="./main/images/default_avatar.png" alt="">
+            <img width="40px" src="{% static 'main/images/default_avatar.png' %}" alt="">
         </div>
     </header>
 
@@ -44,24 +46,24 @@
                     <h2> $13433 </h2>
                   </span>
 
-                  <img src="./main/images/cars/bmw_e36_coupe.png" alt=""> 
+                  <img src="{% static 'main/images/cars/bmw_e36_coupe.png' %}" alt=""> 
                 </span>
 
                 <span class = "car_buttons">
-                  <a href = "./car_tuning.html" class="button">
+                  <a href = "{% url 'car_tuning' %}" class="button">
                     <div class="button-wrapper">
                       <div class="text"> Sell </div>
                       <span class="icon">
-                        <img src="./main/icons/shopping_cart.svg" alt="">
+                        <img src="{% static 'main/icons/shopping_cart.svg' %}" alt="">
                       </span>
                     </div>
                   </a>
 
-                  <a href = "./car_tuning.html" class="button">
+                  <a href = "{% url 'car_tuning' %}" class="button">
                     <div class="button-wrapper">
                       <div class="text"> Tuning </div>
                       <span class="icon">
-                        <img style="margin-top: 1rem;" src="./main/icons/turbo.svg" alt="">
+                        <img style="margin-top: 1rem;" src="{% static 'main/icons/turbo.svg' %}" alt="">
                       </span>
                     </div>
                   </a>
@@ -76,24 +78,24 @@
                     <h2> $22971 </h2>
                   </span>
 
-                  <img src="./main/images/cars/toyota_gt_86.png" alt=""> 
+                  <img src="{% static 'main/images/cars/toyota_gt_86.png' %} " alt=""> 
                 </span>
 
                 <span class = "car_buttons">
-                  <a href = "./car_tuning.html" class="button">
+                  <a href = "{% url 'car_tuning' %}" class="button">
                     <div class="button-wrapper">
                       <div class="text"> Sell </div>
-                      <span class="icon">
-                        <img src="./main/icons/shopping_cart.svg" alt="">
+                      <span class="icon"> 
+                        <img src="{% static 'main/icons/shopping_cart.svg' %}" alt="">
                       </span>
                     </div>
                   </a>
 
-                  <a href = "./car_tuning.html" class="button">
+                  <a href = "{% url 'car_tuning' %}" class="button">
                     <div class="button-wrapper">
                       <div class="text"> Tuning </div>
                       <span class="icon">
-                        <img style="margin-top: 1rem;" src="./main/icons/turbo.svg" alt="">
+                        <img style="margin-top: 1rem;" src="{% static 'main/icons/turbo.svg' %} " alt="">
                       </span>
                     </div>
                   </a>
@@ -108,24 +110,24 @@
                     <h2> $37479 </h2>
                   </span>
 
-                  <img src="./main/images/cars/mazda_rx_7.png" alt=""> 
+                  <img src="{% static 'main/images/cars/mazda_rx_7.png' %}" alt=""> 
                 </span>
 
                 <span class = "car_buttons">
-                  <a href = "./car_tuning.html" class="button">
+                  <a href = "{% url 'car_tuning' %}" class="button">
                     <div class="button-wrapper">
                       <div class="text"> Sell </div>
                       <span class="icon">
-                        <img src="./main/icons/shopping_cart.svg" alt="">
+                        <img src="{% static 'main/icons/shopping_cart.svg' %}" alt="">
                       </span>
                     </div>
                   </a>
 
-                  <a href = "./car_tuning.html" class="button">
+                  <a href = "{% url 'car_tuning' %}" class="button">
                     <div class="button-wrapper">
                       <div class="text"> Tuning </div>
                       <span class="icon">
-                        <img style="margin-top: 1rem;" src="./main/icons/turbo.svg" alt="">
+                        <img style="margin-top: 1rem;" src="{% static 'main/icons/turbo.svg' %} " alt="">
                       </span>
                     </div>
                   </a>
@@ -135,8 +137,8 @@
             </div>
           
             <span class = "slider_button">
-                <a href="#" class = "prev" > <img src="./main/icons/scroll_buttons.png" alt=""> </a>
-                <a href="#" class="next"> <img src="./main/icons/scroll_buttons.png" alt=""> </a>
+                <a href="#" class = "prev" > <img src="{% static 'main/icons/scroll_buttons.png' %}" alt=""> </a>
+                <a href="#" class="next"> <img src="{% static 'main/icons/scroll_buttons.png' %}" alt=""> </a>
             </span>
         </div>
           
