--- a/main/templates/main/car_tuning.html
+++ b/main/templates/main/car_tuning.html
@@ -11,35 +11,13 @@
     <title> Tuning </title>
 </head>
 <body>
-    <header>
-        <div class = "money_header">
-            
-            <span> 
-                <img src="{% static 'main/icons/dollar.png' %} " alt=""> 
-            </span>
-            
-            <span>
-                <h1> $1000</h1>
-            </span>
-
-        </div>
-
-        <div class = "pages_header">
-          <a class = "" href=""> Autobazaar </a>
-          <a class = "" href="{% url 'garage' %}"> Garage </a>
-          <a class = "" href=""> Buy from Dealer  </a>
-        </div>
-
-        <div class = "user_header">
-            <h1> Suro299 </h1>
-            <img width="40px" src="{% static 'main/images/default_avatar.png' %}" alt="">
-        </div>
-    </header>
+    
+    {% include 'main/inc/header.html' %}
 
     <main>
         <div class = "car-box">
             <span class="car-box__span_info">
-                <h1> BMW E36 Coupe </h1>
+                <h1> {{ car.name }} </h1>
                 <h3> Price: <p> $xxxx </p></h3>
                 <h3> Max Speed: <p> xxx km/h </p> </h3>
                 <h3> Power: <p> xxx hp </p> </h3>
@@ -49,29 +27,67 @@
 
             <span class = "car-box__span_image_box">
                 <img src="{% static 'main/images/cars/bmw_e36_coupe.png' %}" alt="">
+
+                <form method = "post" class = "car-box__span_info__form">
+                    {% csrf_token %}
+                    <input type="text" id = "car_ecu" name="car_ecu" value = "{{ car.ecu.id }}">
+                    <input type="text" id = "car_engine" name="car_engine" value = "{{ car.engine.id }}" >
+                    <input type="text" id = "car_turbo" name="car_turbo" value = "{{ car.turbo.id }}">
+                    <input type="text" id = "car_clutch" name="car_clutch" value = "{{ car.clutch.id }}">
+                    <button type = "submit"> Tune </button>
+                </form>                
             </span>
 
             <span  class = "car-box__span_tyuning-box">
-                <div value = "" id = "ecu_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_ecu_section"> 
-                    <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/ecu.png' %}" alt="">
-                    <h1 class = "car-box__span_tuning-box-element_no-selected" > Ecu </h1> 
-                </div>
+                {% if car.ecu %}
+                    <div value = "ecu_{{car.ecu.id}}" onclick="remove_detail('ecu')" id = "ecu_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_ecu_section lvl-{{ car.ecu.level }}">
+                        <img class = "" src="{{ car.ecu.type.image.url }}" alt="">
+                        <h1 class = "" > ecu </h1> 
+                    </div>
+                {% else%}
+                    <div value = "" id = "ecu_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_ecu_section">
+                        <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/ecu.png' %}" alt="">
+                        <h1 class = "car-box__span_tuning-box-element_no-selected" > ecu </h1> 
+                    </div>
+                {% endif %}
 
-                <div value = "" id = "engine_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_engine_section">
-                    <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/engine.png' %}" alt="">
-                    <h1 class = "car-box__span_tuning-box-element_no-selected" > Swap </h1> 
-                </div>
+                {% if car.engine %}
+                    <div value = "engine_{{car.engine.id}}" onclick="remove_detail('engine')" id = "engine_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_engine_section lvl-{{ car.engine.level }}">
+                        <img class = "" src="{{ car.engine.type.image.url }}" alt="">
+                        <h1 class = "" > Engine </h1> 
+                    </div>
+                {% else%}
+                    <div value = "" id = "engine_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_engine_section">
+                        <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/engine.png' %}" alt="">
+                        <h1 class = "car-box__span_tuning-box-element_no-selected" > Swap </h1> 
+                    </div>
+                {% endif %}
 
-                <div value = "" id = "turbo_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_turbo_section">
-                    <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/turbo.png' %}" alt="">
-                    <h1 class = "car-box__span_tuning-box-element_no-selected" > Turbo </h1> 
-                </div>
+                
+                {% if car.turbo %}
+                    <div value = "turbo_{{car.turbo.id}}" onclick="remove_detail('turbo')" id = "turbo_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_turbo_section lvl-{{ car.turbo.level }}">
+                        <img class = "" src="{{ car.turbo.type.image.url }}" alt="">
+                        <h1 class = "" > Turbo </h1> 
+                    </div>
+                {% else %}
+                    <div value = "" id = "turbo_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_turbo_section">
+                        <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/turbo.png' %}" alt="">
+                        <h1 class = "car-box__span_tuning-box-element_no-selected" > Turbo </h1> 
+                    </div>
+                {% endif %}
 
-                <div value = "" id = "clutch_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_clutch_section">
-                    <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/clutch.png' %}" alt="">
-                    <h1 class = "car-box__span_tuning-box-element_no-selected" > Clutch </h1> 
-                </div>
-
+                {% if car.clutch %}
+                    <div value = "clutch_{{car.clutch.id}}" onclick="remove_detail('clutch')" id = "clutch_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_clutch_section lvl-{{ car.clutch.level }}">
+                        <img class = "" src="{{ car.clutch.type.image.url }}" alt="">
+                        <h1 class = "" > clutch </h1> 
+                    </div>
+                {% else %}
+                    <div value = "" id = "clutch_seat" class = "car-box__span_tuning-box-element car-box__span_tuning-box_clutch_section">
+                        <img class = "car-box__span_tuning-box-element_no-selected" src="{% static 'main/images/details/clutch.png' %}" alt="">
+                        <h1 class = "car-box__span_tuning-box-element_no-selected" > clutch </h1> 
+                    </div>
+                {% endif %}
+                
                 <a href="{% url 'detail_tuning' %}" class="car-box__span_link-detail_tuning_button"><button>Details Tuning</button></a>
 
 
@@ -83,44 +99,24 @@
 
         <div class="slider">
 
-            <!-- Chmoranas Post dnes  -->
+
             <form method = "post" id = "user_components" class="slides">
                 {% csrf_token %}
-                <button type = "submit" onclick = "install_detail( 'ecu', 'ecu_1' )" class = "lvl-4" id = "ecu_1" value = "ecu">
-                    <img src="{% static 'main/images/details/ecu.png' %}" alt="">
-                    <h1> Ecu - 1 </h1>
-                </button>
 
+                {% for i in details%}
+                {% if not i.in_car%}
+                    <button type = "submit" onclick = "install_detail( '{{ i.type.name|lower }}', '{{ i.type.name|lower }}_{{ i.id }}' )" id = "{{ i.type.name|lower }}_{{ i.id }}" class = "lvl-{{ i.level }}" value = "{{ i.type.name|lower }}">
+                        <img  src="{{ i.type.image.url }}" alt="">
+                        <h1> {{ i.type.name }} - {{ i.id }}</h1>
+                    </button>
+                {% endif %}
+                {% endfor %}
 
-                <button type = "submit" onclick = "install_detail( 'engine', 'engine_1' )" id = "engine_1" class = "lvl-3" class="active"  value = "engine" >
-                    <img src="{% static 'main/images/details/engine.png' %}" alt="">
-                    <h1> Swap - 1 </h1>
-                </button>
-
-                <button type = "submit" onclick = "install_detail( 'clutch', 'clutch_1' )" id = "clutch_1" class = "lvl-3" class="active"  value = "clutch" >
-                    <img src="{% static 'main/images/details/clutch.png' %}" alt="">
-                    <h1> Clutch - 1 </h1>
-                </button>
-
-
-                <button type = "submit" onclick = "install_detail( 'turbo', 'turbo_1' )" id = "turbo_1" class = "lvl-1" value = "turbo">
-                    <img  src="{% static 'main/images/details/turbo.png' %}" alt="">
-                    <h1> Turbo - 1 </h1>
-                </button>
-
-                <button type = "submit" onclick = "install_detail( 'turbo', 'turbo_2' )" id = "turbo_2" class = "lvl-2" value = "turbo">
-                    <img  src="{% static 'main/images/details/turbo.png' %}" alt="">
-                    <h1> Turbo - 2 </h1>
-                </button>
-
-                <button type = "submit" onclick = "install_detail( 'turbo', 'turbo_3' )" id = "turbo_3" class = "lvl-4" value = "turbo">
-                    <img  src="{% static 'main/images/details/turbo.png' %}" alt="">
-                    <h1> Turbo - 3 </h1>
-                </button>
             </form>
           </div>
     </main>
-</body>
 
-<script src="{% static 'main/js/car_tuning/app.js' %}"></script>
+    
+</body>
+    <script src="{% static 'main/js/car_tuning/app.js' %}"></script>
 </html>
