--- a/main/templates/main/detail_tuning.html
+++ b/main/templates/main/detail_tuning.html
@@ -11,30 +11,7 @@
     <title> Tuning </title>
 </head>
 <body>
-    <header>
-        <div class = "money_header">
-            
-            <span> 
-                <img src="{% static 'main/icons/dollar.png' %}" alt=""> 
-            </span>
-            
-            <span>
-                <h1> $1000</h1>
-            </span>
-
-        </div>
-
-        <div class = "pages_header">
-          <a class = "" href=""> Autobazaar </a>
-          <a class = "" href="{% url 'garage' %}"> Garage </a>
-          <a class = "" href=""> Buy from Dealer  </a>
-        </div>
-
-        <div class = "user_header">
-            <h1> Suro299 </h1>
-            <img width="40px" src="{% static 'main/images/default_avatar.png' %}" alt="">
-        </div>
-    </header>
+    {% include 'main/inc/header.html' %}
 
     <main>
         <div class="main__div-tuninig_box">
