Added 'Buy From Dealer' Page (For test)

--- a/main/static/main/css/garage/style.scss
+++ b/main/static/main/css/garage/style.scss
@@ -190,6 +190,7 @@ main {
   align-items: center;
   flex-direction: column;
   padding: 2rem 0;
+  transition: 0.3s;
 
   & > span {
     width: 100%;
