--- a/main/static/main/css/car_tuning/style.css
+++ b/main/static/main/css/car_tuning/style.css
@@ -93,7 +93,9 @@ main {
   justify-content: space-between;
   align-items: center;
   max-height: 50rem;
-  padding: 2rem 1rem; }
+  padding: 2rem 1rem;
+  transform-style: preserve-3d;
+  perspective: 2000px; }
   .car-box > span {
     height: 100%; }
   .car-box .car-box__span_info {
@@ -105,7 +107,12 @@ main {
     flex-direction: column;
     padding-top: 1rem;
     border: 1px solid #606060;
-    margin-right: 2rem; }
+    margin-right: 2rem;
+    transform: rotateY(38deg);
+    transition: 0.3s;
+    box-shadow: 0px 0px 10px #1b1b1b; }
+    .car-box .car-box__span_info:hover {
+      transform: rotateY(10deg); }
     .car-box .car-box__span_info > h1 {
       font-size: 3rem;
       margin: 1rem 0 2rem; }
@@ -166,7 +173,11 @@ main {
     padding: 1rem;
     width: 34rem;
     flex-wrap: wrap;
-    overflow-y: auto; }
+    overflow-y: auto;
+    transform: rotateY(-38deg);
+    transition: 0.3s; }
+    .car-box .car-box__span_tyuning-box:hover {
+      transform: rotateY(-10deg); }
     .car-box .car-box__span_tyuning-box .car-box__span_tuning-box-element {
       border: 5px solid #313131;
       border-radius: 5px;
@@ -178,7 +189,12 @@ main {
       justify-content: space-between;
       align-items: center;
       flex-direction: column;
-      user-select: none; }
+      user-select: none;
+      transition: 0.2s;
+      box-shadow: 0px 0px 10px #1b1b1b; }
+      .car-box .car-box__span_tyuning-box .car-box__span_tuning-box-element:hover {
+        cursor: pointer;
+        border: 5px solid #797979; }
       .car-box .car-box__span_tyuning-box .car-box__span_tuning-box-element > img {
         width: 70%; }
       .car-box .car-box__span_tyuning-box .car-box__span_tuning-box-element .car-box__span_tuning-box-element_no-selected {
