--- a/main/static/main/css/car_tuning/style.scss
+++ b/main/static/main/css/car_tuning/style.scss
@@ -138,7 +138,8 @@ main {
   max-height: 50rem;
   padding: 2rem 1rem;
   // border: 1px solid $text_color_2;
-  
+  transform-style: preserve-3d;
+  perspective: 2000px;
   & > span {
     height: 100%;
   }
@@ -153,6 +154,14 @@ main {
     padding-top: 1rem;
     border: 1px solid rgb(96, 96, 96);
     margin-right: 2rem;
+    transform: rotateY(38deg);
+    transition: 0.3s;
+    box-shadow: 0px 0px 10px #1b1b1b;
+
+
+    &:hover {
+      transform: rotateY(10deg);
+    }
 
     & > h1 {
       font-size: 3rem;
@@ -243,6 +252,13 @@ main {
     width: 34rem;
     flex-wrap: wrap;
     overflow-y: auto;
+    transform: rotateY(-38deg);
+    transition: 0.3s;
+
+    &:hover {
+      transform: rotateY(-10deg);
+    }
+
 
     .car-box__span_tuning-box-element {
       border: 5px solid rgb(49, 49, 49);
@@ -256,6 +272,14 @@ main {
       align-items: center;
       flex-direction: column;
       user-select: none;
+      transition: 0.2s;
+      box-shadow: 0px 0px 10px #1b1b1b;
+
+
+      &:hover {
+        cursor: pointer;
+        border: 5px solid rgb(121, 121, 121);
+      }
 
       & > img {
         width: 70%;
